infra/k8s/face-recognition-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-recognition-service
  template:
    metadata:
      labels:
        app: face-recognition-service
    spec:
      containers:
        - name: face-recognition-service
          image: levikobi/face-recognition-service
---
apiVersion: v1
kind: Service
metadata:
  name: face-recognition-service
spec:
  selector:
    app: face-recognition-service
  ports:
    - name: face-recognition-service
      protocol: TCP
      port: 3000
      targetPort: 3000
