infra/k8s/face-recognition-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-recognition-redis
  template:
    metadata:
      labels:
        app: face-recognition-redis
    spec:
      containers:
        - name: face-recognition-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: face-recognition-redis-service
spec:
  selector:
    app: face-recognition-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
