infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: face-recognizer.dev
      http:
        paths:
          - path: /api/person/?(.*)
            backend:
              serviceName: face-recognition-service
              servicePort: 3000
